@@ -1,3 +1,9 @@
+2002-07-22  Gary Thomas  <gary@chez-thomas.org>
+
+	* src/viper.S: 
+	* cdl/hal_powerpc_viper.cdl: 
+	Support choices of 47.9, 51.6 MHz for the system clock.
+
 2002-07-18  Gary Thomas  <gary@chez-thomas.org>
 
 	* src/viper.S: Increase power-up delay before starting SDRAM.
